# cs181nicomaya

./: Cargo.toml  README.md  leaderboard.txt
content/: level1.txt  level2.txt  texture.json  texture.png.kra  texture.png~  tilesheet.png.kra
src/: geom.rs  grid.rs  level.rs  main.rs
